Trying to add attribute to join table (doesn't work, I don't know how to put shawa in ingredientRef)

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
 
 <body>
     <h1>Welcome to ShawaCloud</h1>
-    <img th:src="@{/images/veganshawarmarecipe(267).jpg}"/>
+    <img th:src="@{/images/veganshawarmarecipe(267).jpg}"/> <br/>
+    <a th:href="@{/design}" id="another"> Design your first shawarma</a>
 </body>
 </html>
