--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -64,7 +64,7 @@
     <h3>Name your shawa creation:</h3>
     <input type="text" th:field="*{name}"/>
     <div>
-      <!--        todo now: ingredient errors-->
+      <!--        TODO: ingredient errors-->
       <span class="validationError"
             th:if="${#fields.hasErrors('name')}"
             th:errors="*{name}">Error</span>
